--- a/src/app/components/grid-item/grid-item.component.css
+++ b/src/app/components/grid-item/grid-item.component.css
@@ -14,13 +14,27 @@
     box-shadow: 0 0 1em black;
 }
 
+.grid-item-div .image-div {
+    width: 15em;
+    height: 13em;
+}
+
 .grid-item-div .image-div img {
     width: 100%;
     height: 100%;
     object-fit: contain;
     border-radius: 10px;
+    background: white;
 }
 
-.grid-item-div .info-div .tags {
-    display: flex;
+.grid-item-div .info-div {
+}
+
+.grid-item-div .info-div p {
+    font-weight: 550;
+    font-size: 1.3em;
+}
+
+@media (max-width: 600px) {
+
 }
