--- a/src/app/components/main-grid/main-grid.component.css
+++ b/src/app/components/main-grid/main-grid.component.css
@@ -5,11 +5,12 @@
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+    row-gap: 1em;
 }
 
 .grid-div input {
     width: clamp(400px, 60%, 30em);
-    height: 2em;
+    height: 2.5em;
     border-radius: 10px;
     border: none;
     outline: none;
