--- a/src/app/pages/item-page/item-page.component.html
+++ b/src/app/pages/item-page/item-page.component.html
@@ -1,5 +1,5 @@
 <div class="item-page-div">
     <main>
-        <p>Tutaj będzie komponent, w którym osadzona będzie wizualizacja</p>
+        <app-visualization-base/>
     </main>
 </div>
