--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -21,3 +21,15 @@
     transition: .2s ease;
     filter: drop-shadow(0 0 5px hsl(0, 0%, 95%));
 }
+
+@media (max-width: 600px) {
+    .header-div header h1:hover {
+        cursor: pointer;
+        transition: .2s ease;
+        filter: drop-shadow(0 0 0 hsl(0, 0%, 95%));
+    }
+
+    .header-div header h1:active {
+        transform: scale(1.1);
+    }
+}
