Added modular design for DSAs, changed UI styles a bit to look better. Every DSA will extend DSAModule class to later be mapped onto html elements when selected. TO DO implement rest of DSAs.

--- a/src/app/components/visualization-base/visualization-base.component.html
+++ b/src/app/components/visualization-base/visualization-base.component.html
@@ -4,13 +4,8 @@
 
     </main>
     <div class="buttons">
-        <button (click)="addNode(linkedList); renderLinkedList(linkedList, visualizationContainer)">Add Node</button>
-        <button (click)="reverseList(linkedList); renderLinkedList(linkedList, visualizationContainer)">Reverse</button>
-        <button>Test button 1</button>
-        <button>Test button 1</button>
-        <button>Test button 1</button>
-        <button>Test button 1</button>
-        <button>Test button 1</button>
-        <button>Test button 1</button>
+        @for (button of currentModule.buttons; track $index) {
+            <button (click)="button.action(); currentModule.render(visualizationContainer)">{{button.label}}</button>
+        }
     </div>
 </div>
