--- a/src/app/components/grid-item/grid-item.component.css
+++ b/src/app/components/grid-item/grid-item.component.css
@@ -1,8 +1,9 @@
 .grid-item-div {
     display: flex;
     justify-content: center;
-    background: hsl(0, 0%, 40%);
+    background: hsl(0, 0%, 100%, 0.3);
     border-radius: 10px;
+    border: .1em solid whitesmoke;
     padding: clamp(10px, 8%, 2em);
     flex-wrap: wrap;
     transition: .2s ease;
@@ -11,7 +12,8 @@
 .grid-item-div:hover {
     cursor: pointer;
     transition: .2s ease;
-    box-shadow: 0 0 1em black;
+    filter: drop-shadow(0 0 .5em hsl(0, 0%, 90%));
+    box-shadow: 0 0 .5em hsl(0, 0%, 95%);
 }
 
 .grid-item-div .image-div {
