--- a/src/app/components/visualization-base/visualization-base.component.css
+++ b/src/app/components/visualization-base/visualization-base.component.css
@@ -1,8 +1,8 @@
 .visualization-base-div {
     display: flex;
     flex-direction: column;
-    background: hsl(0, 0%, 40%);
-    border: none;
+    background: hsl(0, 0%, 100%, 0.3);
+    border: .1em solid whitesmoke;
     border-radius: 1em;
     margin: 1em 6em 0 6em;
 }
@@ -41,19 +41,22 @@
 }
 
 .visualization-base-div .buttons button {
-    background: whitesmoke;
-    border: none;
-    border-radius: .8em;
+    background: hsl(0, 0%, 100%, 0.2);
+    border: 2px solid whitesmoke;
+    border-radius: 0;
     width: 7em;
     height: 3em;
     padding: .2em .5em .2em .5em;
+    color: whitesmoke;
+    font-weight: bold;
     transition: .2s ease;
 }
 
 .visualization-base-div .buttons button:hover {
     cursor: pointer;
-    background: hsl(0, 0%, 80%);
+    background: hsl(0, 0%, 95%, 0.4);
     transition: .2s ease;
+    border-radius: 1.4em;
 }
 
 .visualization-base-div .buttons button:active {
