--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,9 @@
 body {
     font-family: Poppins, sans-serif;
     color: whitesmoke;
-    background: hsl(0, 0%, 25%);
+    background: linear-gradient(135deg, steelblue, lightskyblue);
+    height: 100%;
     box-sizing: border-box;
-    padding: 0;
+    padding: 0 0 .6em 0;
     margin: 0;
 }
