--- a/src/app/components/visualization-base/visualization-base.component.css
+++ b/src/app/components/visualization-base/visualization-base.component.css
@@ -60,7 +60,7 @@
 }
 
 .visualization-base-div .buttons button:active {
-    background: hsl(0, 0%, 70%);
+    background: hsl(0, 0%, 95%, 0.2);
     transition: .1s ease-out;
 }
 
