Major refactor was done, container is no longer passes to render method, but it is a field in each module. Added animation in StackModule.

--- a/src/app/components/visualization-base/visualization-base.component.html
+++ b/src/app/components/visualization-base/visualization-base.component.html
@@ -5,7 +5,7 @@
     </main>
     <div class="buttons">
         @for (button of currentModule.buttons; track $index) {
-            <button (click)="button.action(); currentModule.render(visualizationContainer)">{{button.label}}</button>
+            <button (click)="button.action()">{{button.label}}</button>
         }
     </div>
 </div>
