--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: Poppins, sans-serif;
     color: whitesmoke;
     background: linear-gradient(135deg, steelblue, lightskyblue);
-    height: 100%;
+    height: 100vh;
     box-sizing: border-box;
     padding: 0 0 .6em 0;
     margin: 0;
